Combined lit review with methods and discussion with conclusions

--- a/fits.qmd
+++ b/fits.qmd
@@ -52,7 +52,7 @@ tar_config_set(store = here::here("_targets"))
 tar_load(c(austa))
 ```
 
-# Introduction
+# Introduction {#sec-introduction}
 
 Time series forecasting models use historical data to estimate future values [@fildes2008forecasting] based on consistent patterns observed in the past. However, time series are sometimes disrupted by unusual events that jeopardise the regularity of the time series pattern. This can be defined as an *interrupted time series*. Time series data may be disrupted by a variety of reasons, ranging from temporary policy changes to natural disasters. Outbreaks, epidemics, and pandemics, for example, may have a considerable impact on population behavior, causing discrepancies and interruptions of data in a variety of industries such as healthcare, pharmaceuticals, transportation, retail, tourism, and traffic management. Similarly, supply chain disruptions induced by factors such as strikes or shortages cause irregularities in sales, inventory levels, production, and delivery, often resulting in data gaps. Transportation-related data may be interrupted due to equipment failures, such as malfunctions or breakdowns in vehicles, aircraft, or rail systems, resulting in missing or inaccurate data points. Furthermore, cybersecurity breaches data quality by possibly skewing readings in datasets relating to financial transactions, network traffic, and user activity, complicating time series analysis.
 
@@ -60,29 +60,13 @@ The disruptions may result in relatively simple changes in the series; for examp
 
 The presence of such disrupted events poses a significant challenge to time series forecasting approaches, restricting their ability to reliably capture systematic information and forecast future values. The implications of these temporal interruptions are far-reaching: time series forecasting techniques, which are a key component of the forecaster's toolbox, may no longer be viable options since time series models usually assume that the data will evolve in the future in a similar way to how it has evolved in the past. But a big event (such as COVID-19) can result in a future that is different from the past, at least in the short term. Therefore, practitioners face a critical question: how to effectively forecast time series data that are impacted by such disruptive events? Many forecasters have faced this issue recently with the COVID-19 pandemic, where historical patterns have been severely disrupted due to policy interventions, lockdowns, and other restrictions. This study is motivated by numerous conversations with academics and practitioners, which demonstrate widespread concern about dealing with data affected by events like the COVID-19 pandemic. In this paper, we consider a range of models that can be used to forecast time series influenced by disrupted events, and compare their performance on some real data sets.
 
-It is important to note that in this study, we consider the problem of forecasting interrupted time series both during and after the event. This is a separate problem from change point detection [@truong2020selective] and anomaly detection [@talagala2020anomaly]. In the situations we investigate, we know that a change has occurred which has caused some unusual observations, and we want to forecast what will happen next. Change point detection refers to determining *when* a change occurred [@blazquez2021review], and anomaly detection aims to identify unusual observations with the intention of either minimising their value, or paying particular attention to them, and doing a root-cause investigation. Our study focus also differs from *intervention modeling*, sometimes referred to as *interrupted time series analysis and modelling* [@mcdowall2019interrupted], which is used when we have data about an outcome over time and the aim is to assess the impact of an intervention, policy, or program implemented at a specific time point. We are not trying to measure the impact of the interruption; rather we are trying to produce sensible forecasts during and after the interruption.
+Although several approaches to the problem exist, the literature lacks recommendations and comparisons of alternative strategies for forecasting time series data influenced by interruptions such as the COVID-19 pandemic. This paper aims to close this gap by proposing several methodologies for forecasting time series influenced by such disruptions.
+
+It is important to note that in this study, we consider the problem of forecasting interrupted time series both during and after the event. This is a separate problem from change point detection [@aue2013structural;@truong2020selective] and anomaly detection [@talagala2020anomaly]. In the situations we investigate, we know that a change has occurred which has caused some unusual observations, and we want to forecast what will happen next. Change point detection refers to determining *when* a change occurred [@blazquez2021review], and anomaly detection aims to identify unusual observations with the intention of either minimising their value, or paying particular attention to them, and doing a root-cause investigation. Our study focus also differs from *intervention modeling*, sometimes referred to as *interrupted time series analysis and modelling* [@mcdowall2019interrupted], which is used when we have data about an outcome over time and the aim is to assess the impact of an intervention, policy, or program implemented at a specific time point. We are not trying to measure the impact of the interruption; rather we are trying to produce sensible forecasts during and after the interruption.
 
 To our knowledge, this is the first study to describe and compare general strategies for forecasting interrupted time series, such as COVID-19 affected data. The study proposes and evaluates multiple forecasting strategies designed to handle interruptions in time series forecasting caused by disruptive events. These approaches include a range of models capable of capturing different types of changes, from simple level shifts to more complex alterations in seasonal patterns and trends. By comparing the performance of these models on two real data sets affected by the COVID-19 pandemic, the paper offers valuable insights into the effectiveness and practical implications of each approach. By discussing the advantages and disadvantages of each strategy, and providing recommendations based on the findings, the paper equips practitioners with actionable insights for addressing the challenges associated with forecasting during and after disruptive events. Further, by adhering to reproducibility principles and providing both data and R code for the forecasting models, the research contributes to transparency and promotes the generalizability of the suggested strategies to a variety of domains. This openness allows for the replication of results, ensuring the reliability of findings, and enhancing the accessibility and utility of study outputs for the larger research community.
 
-We introduce several strategies to handling interruptions when forecasting in @sec-methods. We then apply these approaches to two real data sets in @sec-sec-examples. Finally, in @sec-conclusions, we discuss some of the advantages and disadvantages of each approach, and provide some recommendations for practitioners.
-
-# Related works
-
-The presence of unusual observations in time series analysis is a significant concern that has received attention in numerous studies. In this section, we provide a brief overview of some of these relevant publications.
-
-One modelling approach that has gained popularity is the intervention model, also known as interrupted time series (ITS) modelling, introduced by @box1975intervention. This approach focuses on understanding how and whether outcomes change following the implementation of an intervention, policy, or programme at a specific time point. ITS models provide a robust tool for analysing policy and programme evaluation across diverse domains [@bernal2017interrupted;@mcdowall2019interrupted]. These models can forecast future values by developing models that incorporate a range of components, such as pre-intervention levels, trends, seasonality, covariates related to the intervention time, and other external factors that might affect the outcome variable. A related approach is the multiple regimes model, which is particularly useful in forecasting due to its ability to capture structural changes and transitions observed in interrupted time series data [@Koopg2007].
-
-There are also statistical models that are used to detect changes in the time series data and that can model unusual observation and have proven effective in similar situations. A range of methods such as simple location shift and scale shift models [@aue2013structural], Bayesian [@barry1993bayesian], and supervised and supervised machine learning [@aminikhanghahi2017survey]. Facebook’s Prophet [@taylor2018forecasting] is an example of a time series forecasting method that can incorporate changepoint detection (automatically or manually), and adjust model parameters to capture the newest trends in a time series. Anomaly detection is another related area in time series analysis. In the context of anomaly detection, time series anomalies are defined as points or subsequences with unexpected or abnormal values, and the detection goal is to identify such anomalies [@blazquez2021review].
-
-In the context of forecasting disruptions such as the COVID-19 pandemic, Bayesian approaches have been proposed for detecting changing points in outbreaks and forecasting case numbers under counterfactual scenarios [@dehning2020inferring]. Counterfactual analysis examines what would have happened to the forecast variable of interest if the disruptive event had not occurred. @athanasopoulos2023probabilistic proposed a variant of this approach for forecasting tourism recovery from COVID-19, combining forecast reconciliation and forecast combinations applied to historical data, to generate COVID-free counterfactual forecasts of what might have been if the pandemic never occurred. Then scenario-based judgemental probabilistic forecasts were compared with the counterfactual forecasts, to better understand the future recovery of the tourism sector from the pandemic.
-
-Inventory stockouts are a common cause of data interruption in the supply chain. To deal with these interruptions, a popular technique is to provide an estimate for the observation corresponding to the stock-out period as if there were no stock-outs, and then generate projections appropriately. @Bell2000 presented an adjustment strategy for stock-out periods that involves smoothing demand volatility and correcting for stockouts using predicted variance conditioned on the observed stockout. @trapero2023demand also used the Tobit Kalman filter (TKF) for models presented in a state space framework for forecasting purposes. This method can efficiently deal with trends, seasonality, and exogenous influences in censored data, as long as the forecasting model functions within a state space framework.
-
-Certain models offer flexibility in adjusting to changes in time series characteristics over time. Exponential Smoothing State Space models (ETS) represent an adaptive method that has demonstrated competitiveness in time series forecasting [@gardner2006exponential]. These approaches allow for the adaptation of model parameters over time to accommodate shifts in time series characteristics [@hyndman2002state]. Similarly, time-varying parameter models exhibit high adaptability [@harvey2006forecasting], enabling forecasting models to better accommodate interruptions in data over time. Time-varying parameters are frequently utilized in dynamic forecasting models, such as state-space models or Bayesian structural time series models [@talih2005structural]. Some models employ approaches to reduce the influence of affected observations during model training by assigning different weights. The utilization of weights extends beyond merely including or excluding observations and can also balance the degree of influence each observation has on the forecasting model [@khoshgoftaar2007empirical].
-
-Disruptive events may potentially alter time series by causing gaps, or sometimes observations can be converted into missing data. While many time series forecasting models struggle with missing data, several approaches can internally handle missing data [@twala2008good]. @7157837 suggested a forecasting approach based on the Least Squares Support Vector Machine (LSSVM) that was particularly designed to handle time series forecasting with missing data. A different study by @tang2020joint focused on local and global temporal dynamics for multivariate time series forecasting with missing data. Their proposed framework uses a memory network to capture global temporal patterns with local data as key components.
-
-Although several approaches exist, the literature lacks recommendations and comparisons of alternative strategies for forecasting time series data influenced by interruptions such as the COVID-19 pandemic. This paper aims to close this gap by proposing several methodologies for forecasting time series influenced by such disruptions.
+We introduce several strategies to handling interruptions when forecasting in @sec-methods. We then apply these approaches to two real data sets in @sec-examples. Finally, in @sec-conclusions, we discuss some of the advantages and disadvantages of each approach, and provide some recommendations for practitioners.
 
 # Handling interruptions when forecasting {#sec-methods}
 
@@ -90,27 +74,41 @@ In this section, we describe several possible strategies to handle interruptions
 
 ## Use a highly adaptive model
 
-Highly adaptive models can adjust to the interruption as it is happening and will therefore be able to approximate the data generating process relatively well. For example, an ETS model with large smoothing parameters will be able to adjust to the interruption relatively quickly. This has the advantage of being a very simple solution that is easy to implement and fast to compute. There is no need to explicitly model the interruption, and so the model can be used for forecasting even if the timing or effect of the interruption is unknown.
+Highly adaptive models offer flexibility in adjusting to changes in time series characteristics over time. These models can adjust to the interruption as it is happening and will therefore be able to approximate the data generating process relatively well.
 
-However, the prediction intervals will be large because the model will have heavily discounted past data. In fact, the model will largely forget the past data other than the most recent observations, so there is no memory of the seasonal patterns and other dynamics that were present before the interruption. Consequently, the approach works best if there is no assumption that the post-interruption period will be similar to the pre-interruption period.
+Exponential Smoothing State Space models (ETS) represent an adaptive method that has demonstrated competitiveness in time series forecasting [@gardner2006exponential]. These models allow for the adaptation of model parameters over time to accommodate shifts in time series characteristics [@hyndman2002state]. For example, an ETS model with large smoothing parameters will be able to adjust to the interruption relatively quickly. This has the advantage of being a very simple solution that is easy to implement and fast to compute. There is no need to explicitly model the interruption, and so the model can be used for forecasting even if the timing or effect of the interruption is unknown.
+
+Similarly, time-varying parameter models exhibit high adaptability [@harvey2006forecasting], enabling forecasting models to better accommodate interruptions in data over time. Time-varying parameters are frequently utilized in dynamic forecasting models, such as state-space models or Bayesian structural time series models [@talih2005structural]. Some models employ approaches to reduce the influence of affected observations during model training by assigning different weights. The utilization of weights extends beyond merely including or excluding observations and can also balance the degree of influence each observation has on the forecasting model [@khoshgoftaar2007empirical].
+
+The prediction intervals from highly adaptive models tend to be wide because the model will have heavily discounted past data. In fact, the model will largely forget the past data other than the most recent observations, so there is no memory of the seasonal patterns and other dynamics that were present before the interruption. Consequently, the approach works best if there is no assumption that the post-interruption period will be similar to the pre-interruption period.
 
 ## Use an intervention model
 
-A dynamic regression model with intervention covariates can be used to model the interruption explicitly. For example, if the intervention involves a simple level shift with a reverse level shift at the end of the intervention, we can use a dummy variable to indicate the interruption period and allow the model to adjust to the interruption. More complicated interventions can be handled by using more covariates.
+One modelling approach that has gained popularity in handling disruptions is the intervention model, also known as interrupted time series (ITS) modelling, introduced by @box1975intervention. This approach focuses on understanding how and whether outcomes change following the implementation of an intervention, policy, or programme at a specific time point. ITS models provide a robust tool for analysing policy and programme evaluation across diverse domains [@bernal2017interrupted;@mcdowall2019interrupted]. These models can forecast future values by developing models that incorporate a range of components, such as pre-intervention levels, trends, seasonality, covariates related to the intervention time, and other external factors that might affect the outcome variable. A related approach is the multiple regimes model, which is particularly useful in forecasting due to its ability to capture structural changes and transitions observed in interrupted time series data [@Koopg2007].
+
+A special case of the intervention models proposed by @box1975intervention is a dynamic regression (or regression with ARIMA errors) model. This model includes covariates describing the interruption explicitly, with an ARIMA process describing the remaaining time series dynamics. For example, if the intervention involves a simple level shift with a reverse level shift at the end of the intervention, we can use a dummy variable to indicate the interruption period and allow the model to adjust to the interruption. More complicated interventions can be handled by using more covariates.
 
 This has the advantage of retaining the memory of the past, and so the seasonal patterns and other dynamics will be retained. This allows the change period to be effectively modelled, provided the intervention variables are chosen well. However, the model will assume that the post-interruption period will be similar to the pre-interruption period, and so the prediction intervals may be too narrow, especially if there is a lasting effect beyond the end of the interruption.
 
 ## Set to missing
 
-Many time series models will handle periods of missing values. So the problematic observations that occur during the period of disruption can be set to missing, and the model should continue to produce forecasts as if the interruption had not occurred. Of course, the forecasts will not be accurate for the period of disruption, but they can be interpreted as "what might have been". This solution requires a judgement to be made about when the disruption has begun, and when normality resumes.
+Disruptive events may potentially alter time series by causing gaps. Alternatively, problematic observations that occur during the period of disruption can be set to missing, and a model fitted to the remaining observations should continue to produce forecasts as if the interruption had not occurred. Of course, the forecasts will not be accurate for the period of disruption, but they can be interpreted as "what might have been". This solution requires a judgement to be made about when the disruption has begun, and when normality resumes.
 
-Because no information is retained during the disruption, the prediction intervals will become large during the disruption, and after the disruption, they will remain large until the model has enough data to estimate the forecast distribution more accurately.
+While many time series forecasting models struggle with missing data, several approaches can internally handle missing data [@twala2008good]. @7157837 suggested a forecasting approach based on a Least Squares Support Vector Machine (LSSVM) that was particularly designed to handle time series forecasting with missing data. A different study by @tang2020joint focused on local and global temporal dynamics for multivariate time series forecasting with missing data. Their proposed framework uses a memory network to capture global temporal patterns with local data as key components.
+
+In this approach, no information is retained during the disruption, so the prediction intervals will become large during the disruption, and after the disruption, they will remain large until the model has enough data to estimate the forecast distribution more accurately.
 
 ## Estimate what might have been
 
 A fourth solution is to estimate what might have been during the period of disruption and then use the adjusted data to fit a model. The estimates could be made using any convenient method. One approach would be to set the estimates to equal the forecasts made using only pre-interruption data. This then becomes almost equal to the previous solution, except that the prediction intervals will be narrower because the estimation uncertainty has not been taken into account. On the other hand, it is more flexible than the previous approach because models that do not handle missing values can then be used.
 
 An alternative would be to take the model estimated under the previous solution (setting the observations during the disruption to missing), and use it to estimate what might have been during the disruption. Then the model can be re-estimated using the adjusted data. Note that forecasts obtained in this way during the disruption will not be true forecasts because they will have used data from the future in computing the adjusted data during the disruption. But post-disruption forecasts will be true forecasts and should be almost the same as those obtained using the previous solution.
+
+These approaches are sometimes called "counterfactual" methods, as they examine what would have happened to the forecast variable of interest if the disruptive event had not occurred. @athanasopoulos2023probabilistic proposed a variant of this approach for forecasting tourism recovery from COVID-19, combining forecast reconciliation and forecast combinations applied to historical data, to generate COVID-free counterfactual forecasts of what might have been if the pandemic never occurred. Then scenario-based judgemental probabilistic forecasts were compared with the counterfactual forecasts, to better understand the future recovery of the tourism sector from the pandemic.
+
+Inventory stockouts are a common cause of data interruption in the supply chain. To deal with these interruptions, a counterfactual approach is popular, whereby the demand corresponding to the stock-out period is estimated as if there were no stock-outs, and then forecasts are obtained. @Bell2000 presented an adjustment strategy for stock-out periods that involves smoothing demand volatility and correcting for stockouts using predicted variance conditioned on the observed stockout. @trapero2023demand also used the Tobit Kalman filter (TKF) for models presented in a state space framework for forecasting purposes. This method can efficiently deal with trends, seasonality, and exogenous influences in censored data, as long as the forecasting model functions within a state space framework.
+
+In the context of forecasting disruptions such as the COVID-19 pandemic, Bayesian approaches have also been proposed for detecting changing points in outbreaks and forecasting case numbers under counterfactual scenarios [@dehning2020inferring].
 
 ## Downweight the interruption period
 
@@ -266,7 +264,7 @@ The forecasts shown in @fig-walkers-plot4 are obtained by replacing the observat
 
 Finally, in @fig-walkers-ensemble-plot, we show the ensemble forecasts obtained by averaging the forecasts from the first two solutions discussed above. The results are relatively good, other than having some difficulty around the period of the first lockdown.
 
-# Discussion
+# Discussion and conclusions {#sec-conclusions}
 
 We have presented several approaches to forecasting in the presence of an interruption. Each has its advantages and disadvantages, and the choice of which to use will depend on the situation. In fact, we have used almost all of these approaches in our own consulting work. An intervention model is often a good solution, provided the intervention can be modelled relatively simply. However, if the intervention is complex, then a highly adaptive method is often better. The highly adaptive model is also useful when the timing of the interruption is unknown or when the post-interruption period is expected to be very different from the pre-interruption period. The missing value approach is particularly useful when only post-interruption forecasts are required and forecasts during the interruption period are not needed.
 
@@ -275,8 +273,6 @@ We have not previously used the weighted approach in practice, and open-source s
 Finally, the ensemble approach is useful when there is uncertainty about which approach to use, and will often result in greater accuracy due to the power of averaging.
 
 We have not discussed probabilistic forecasting in any detail in this paper, other than producing some prediction intervals for some of the examples. One would expect forecast uncertainty to increase during, and to some extent after, a major disruption. The highly adaptive model and innovation model should produce relatively good prediction intervals, although the variance is often underestimated. Because the missing value approach is producing counterfactual ("what might have been") forecasts, the prediction intervals will often not include the actual observations during the disruption period. Prediction intervals for ensemble forecasts can be obtained by averaging the end points of the component prediction intervals [@lichtendahl2013better], for those models where the prediction intervals seem reasonable.
-
-# Conclusion
 
 It is not uncommon for modellers to experience interruptions in time series data. Both those in charge of developing forecasting models, and managers relying on forecasts to inform decisions and policies, have recently faced the issue of effectively forecasting time series data influenced by the COVID-19 pandemic. While this can stand as a critical challenge for many forecasting teams, it is important to recognise that similar challenges could arise in circumstances other than COVID-19. Time series can be disrupted by various factors, such as natural disasters, policy changes, price fluctuations, definition changes, sensor failures in the IoT (Internet of Things), maintenance, and breakdowns in factories,  just to mention a few.
 
