--- a/_extensions/numbats/wp/before-body.tex
+++ b/_extensions/numbats/wp/before-body.tex
@@ -23,7 +23,7 @@ $endif$
 $if(keywords)$
 \begin{keywords}
   $for(keywords/allbutlast)$$keywords$; $endfor$
-  $for(keywords/last)$$keywords$$endfor$
+  $for(keywords/last)$$keywords$$endfor$.
 \end{keywords}
 $else$
   $if(abstract)$
